fix capitalization, dead whitespace, add contributors to AUTHORS

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,2 +1,9 @@
+Maintainers:
+
 Josef Prusa <iam@josefprusa.cz>
 Pavol Rusnak <stick@gk2.sk>
+
+Contributors:
+
+Jordan Miller <peptides@benchscience.org>
+Philip Kin <philip@thekinfamily.com>
