--- a/README
+++ b/README
@@ -8,4 +8,4 @@ It uses syntax similar to JavaDoc and is able to generate:
   * Wiki documentation (suitable for the reprap.org wiki)
   * Dependency tree in text-mode and using GraphViz
 
-For more information check our wiki at: http://thinkdoc.org/
+For more information check our wiki at: http://thingdoc.org/
